--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -11,7 +11,8 @@
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-   <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <!--<link rel="stylesheet" href="/css/style.css" type="text/css"> -->
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body id="page-top">
@@ -33,12 +34,14 @@
         </div>
     </nav>
 
-    <header class="masthead bg-primary text-white text-center">
+    <header class="masthead bg-primary text-white text-center" style="background-image: url(img/background-banner.jpg); background-size:cover; background-repeat:no-repeat;">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-3" style="width: 50%" src="/img/avatar.png" alt="..." />
+            <!--<img class="masthead-avatar mb-3" style="width: 50%" src="/img/avatar.png" alt="..." />-->
+
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Lako do posla</h1>
+
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
@@ -90,7 +93,8 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img style="width: 100%" class="img-fluid" src="/img/portfolio/it.png" alt="..." />
+                        <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/it.png" alt="..." />-->
+                        <img style="width: 100%" class="img-fluid" src="img/portfolio/it.png" alt="..." />
                     </div>
                 </div>
                 <!-- Portfolio Item 2-->
@@ -100,7 +104,9 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img style="width: 100%" class="img-fluid" src="/img/portfolio/prosveta.png" />
+                        <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/prosveta.png" />-->
+
+                        <img style="width: 100%" class="img-fluid" src="img/portfolio/prosveta.png" />
                     </div>
                 </div>
                 <!-- Portfolio Item 3-->
@@ -110,7 +116,9 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img style="width: 100%" class="img-fluid" src="/img/portfolio/kuvanje.png" />
+                        <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/kuvanje.png" />-->
+                        <img style="width: 100%" class="img-fluid" src="img/portfolio/kuvanje.png" />
+
                     </div>
                 </div>
                 <!-- Portfolio Item 4-->
@@ -120,7 +128,8 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img style="width: 100%" class="img-fluid" src="/img/portfolio/gradjevina.png" />
+                        <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/gradjevina.png" />-->
+                        <img style="width: 100%" class="img-fluid" src="img/portfolio/gradjevina.png" />
                     </div>
                 </div>
                 <!-- Portfolio Item 5-->
@@ -130,7 +139,8 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img style="width: 100%" class="img-fluid" src="/img/portfolio/ekonomija.png" />
+                        <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/ekonomija.png" />-->
+                        <img style="width: 100%" class="img-fluid" src="img/portfolio/ekonomija.png" />
                     </div>
                 </div>
                 <!-- Portfolio Item 6-->
@@ -139,7 +149,8 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img style="width: 100%" class="img-fluid" src="/img/portfolio/prosveta.png" />
+                        <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/prosveta.png" />-->
+                        <img style="width: 100%" class="img-fluid" src="img/portfolio/ostalo.png" />
                     </div>
                 </div>
             </div>
@@ -160,8 +171,8 @@
             <div class="row">
                 <div class="col-lg-4 ms-auto">
                     <p class="lead">
-                        Sajt lako do posla je osnovan u julu, 2021.godine u Kragujevcu. Naša vizija je da korisnicima koji žele da se zaposle omogućimo brz, jednostavan, a pre svega besplatan pronalazak posla dok sa druge strane, poslodavcima pružamo veliki izbor potencijalnih
-                        radnika.
+                        Sajt <i><b>Lako do posla</b></i> je osnovan u julu 2021. godine u Kragujevcu sa jednom humanom idejom. Naime, naša vizija je da omogučimo brz, jednostavan, a pre svega besplatan pronalazak željenog posla za ljude kojima je potreban,
+                        dok poslodavcima nudimo mogućnost pronalaska kvalifikovanih radnika.
                     </p>
                 </div>
                 <div class="col-lg-4 me-auto">
