--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -1,1 +1,118 @@
-Profil
+<html>
+
+<head>
+    <title>Lako do posla - Profil</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head>
+
+<body class="ostaleStrane">
+    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="#page-top">Lako do posla</a>
+            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="sviOglasi.html">Oglasi</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="index.html#about">O nama</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="index.html#contact">Kontakt</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#">Odjavi se</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-2"></div>
+            <div class="col-lg-6 col-md-8 login-box">
+                <div class="col-lg-12 login-user">
+                    <i class="far fa-user" aria-hidden="true"></i>
+                </div>
+                <div class="col-lg-12 login-title">
+                    <p id="profil-korisnicko-ime"> KORISNICKO IME </p>
+                </div>
+                <div class="col-lg-12 login-form">
+                    <div class="col-lg-12 login-form">
+                        <form>
+                            <div class="form-group">
+                                <label class="form-control-label">Ime i Prezime</label>
+                                <input type="text" value="Ime i Prezime" id="profil-grad" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Mesto boravka</label>
+                                <input type="text" id="profil-grad" value="Mesto boravka" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Email</label>
+                                <input type="email" value="imeprezime@email.com" id="profil-email" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Telefon</label>
+                                <input type="text" value="Telefon" id="profil-telefon" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Lozinka</label>
+                                <input type="text" id="profil-lozinka1" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Potvrdite lozinku</label>
+                                <input type="password" id="profil-lozinka2" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-control-label">Stara lozinka</label>
+                                <input type="password" id="profil-stara-lozinka" class="form-control">
+                            </div>
+                            <div class="dugme">
+                                <button type="button" class="btn btn-outline-primary">Sačuvaj</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-2"></div>
+        </div>
+    </div>
+
+    <div class="space"> </div>
+    
+    <footer class="footer text-center">
+        <div class="container">
+            <div class="row">
+                <!-- Footer Location-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Pronađite nas</h4>
+                    <p class="lead mb-0">
+                         Radoja Domanovića 12
+                        <br /> 34000 Kragujevac
+                        <br /> Srbija
+                    </p>
+                </div>
+                <!-- Footer Social Icons-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Posetite nas na društvenim mrežama</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-instagram"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                </div>
+                <!-- Footer About Text-->
+                <div class="col-lg-4">
+                    <h4 class="text-uppercase mb-4">O nama</h4>
+                       <p class="lead mb-0">
+                        Sajt za brzu i jednostavnu pretragu poslova, kao i pronalaženja kandidata za posao.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Copyright Section-->
+    <div class="copyright py-4 text-center text-white">
+        <div class="container"><small>Copyright &copy; Lako do posla 2021</small></div>
+    </div>
+</body>
+
+</html>
