--- a/Project/src/main/resources/templates/signin.html
+++ b/Project/src/main/resources/templates/signin.html
@@ -4,7 +4,7 @@
     <title>Lako do posla - Prijavi se</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="js/functions.js" type="text/javascript"></script>
 </head>
 
@@ -69,9 +69,9 @@
             </div>
         </div>
     </div>
-    
+
     <div class="space"> </div>
-    
+
     <footer class="footer text-center">
         <div class="container">
             <div class="row">
@@ -79,7 +79,7 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Pronađite nas</h4>
                     <p class="lead mb-0">
-                         Radoja Domanovića 12
+                        Radoja Domanovića 12
                         <br /> 34000 Kragujevac
                         <br /> Srbija
                     </p>
@@ -95,7 +95,7 @@
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">O nama</h4>
-                       <p class="lead mb-0">
+                    <p class="lead mb-0">
                         Sajt za brzu i jednostavnu pretragu poslova, kao i pronalaženja kandidata za posao.
                     </p>
                 </div>
