--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -4,8 +4,8 @@
     <title>Lako do posla - Prijavi se</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/functions.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
 <body onload="Dajgradove()" class="ostaleStrane">
