--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-
+    <script src="/js/jQuery.js" type="text/javascript"></script>
+    <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body class="ostaleStrane">
+<body class="ostaleStrane" onload="popuniProfil()">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Lako do posla</a>
@@ -40,7 +41,7 @@
                         <form>
                             <div class="form-group">
                                 <label class="form-control-label">Ime i Prezime</label>
-                                <input type="text" value="Ime i Prezime" id="profil-grad" class="form-control">
+                                <input type="text" value="Ime i Prezime" id="profil-grad" name="ime" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Mesto boravka</label>
