--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -3,6 +3,8 @@
 <head>
     <title>Lako do posla - Profil</title>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="/js/jQuery.js" type="text/javascript"></script>
@@ -34,7 +36,7 @@
                     <i class="far fa-user" aria-hidden="true"></i>
                 </div>
                 <div class="col-lg-12 login-title">
-                    <p id="profil-korisnicko-ime"> KORISNICKO IME </p>
+                    <p id="profil-korisnicko-ime" name="korisnicko-ime"> KORISNICKO IME </p>
                 </div>
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
@@ -45,27 +47,25 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Mesto boravka</label>
-                                <input type="text" id="profil-grad" value="Mesto boravka" class="form-control">
+                                <input type="text" id="profil-grad" name="grad" value="Mesto boravka" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Email</label>
-                                <input type="email" value="imeprezime@email.com" id="profil-email" class="form-control">
+                                <input type="email" id="profil-email" name="email" value="imeprezime@email.com" class="form-control">
                             </div>
-                            <div class="form-group">
-                                <label class="form-control-label">Telefon</label>
-                                <input type="text" value="Telefon" id="profil-telefon" class="form-control">
+                            <div id="telefoni">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Lozinka</label>
-                                <input type="text" id="profil-lozinka1" class="form-control">
+                                <input type="password" id="profil-lozinka1" name="lozinka1" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Potvrdite lozinku</label>
-                                <input type="password" id="profil-lozinka2" class="form-control">
+                                <input type="password" id="profil-lozinka2" name="lozinka2" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Stara lozinka</label>
-                                <input type="password" id="profil-stara-lozinka" class="form-control">
+                                <input type="password" id="profil-stara-lozinka" name="stara-lozinka" class="form-control">
                             </div>
                             <div class="dugme">
                                 <button type="button" class="btn btn-outline-primary">Sačuvaj</button>
