--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -11,7 +11,7 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body class="ostaleStrane" onload="popuniProfil()">
+<body class="ostaleStrane" onload="popuniProfil(); Dajgradove()">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Lako do posla</a>
@@ -43,29 +43,35 @@
                         <form>
                             <div class="form-group">
                                 <label class="form-control-label">Ime i Prezime</label>
-                                <input type="text" value="Ime i Prezime" id="profil-grad" name="ime" class="form-control">
+                                <input type="text" value="Ime i Prezime" id="profil-ime" name="ime" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Mesto boravka</label>
-                                <input type="text" id="profil-grad" name="grad" value="Mesto boravka" class="form-control">
+                                <select class="form-control" id="profil-grad" ata-sb-validations="required"></select>
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Email</label>
-                                <input type="email" id="profil-email" name="email" value="imeprezime@email.com" class="form-control">
+                                <input type="text" id="profil-email" name="email" value="imeprezime@email.com" class="form-control">
                             </div>
                             <div id="telefoni">
                             </div>
                             <div class="form-group">
-                                <label class="form-control-label">Lozinka</label>
-                                <input type="password" id="profil-lozinka1" name="lozinka1" class="form-control">
+                                <label class="form-control-label">Opis</label>
+                                <input type="text" id="profil-opis" name="opis" value="Kratak opis" class="form-control">
                             </div>
-                            <div class="form-group">
-                                <label class="form-control-label">Potvrdite lozinku</label>
-                                <input type="password" id="profil-lozinka2" name="lozinka2" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-control-label">Stara lozinka</label>
-                                <input type="password" id="profil-stara-lozinka" name="stara-lozinka" class="form-control">
+                            <div id="lozinke">
+                                <div class="form-group">
+                                    <label class="form-control-label">Lozinka</label>
+                                    <input type="password" id="profil-lozinka1" name="lozinka1" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-control-label">Potvrdite lozinku</label>
+                                    <input type="password" id="profil-lozinka2" name="lozinka2" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-control-label">Stara lozinka</label>
+                                    <input type="password" id="profil-stara-lozinka" name="stara-lozinka" class="form-control">
+                                </div>
                             </div>
                             <div class="dugme">
                                 <button type="button" class="btn btn-outline-primary">Sačuvaj</button>
