--- a/Project/src/main/resources/templates/sviOglasi.html
+++ b/Project/src/main/resources/templates/sviOglasi.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-lg-12 mx-auto">
                 <!-- List group-->
-                <ul class="list-group shadow">
+                <ul class="list-group shadow" id="lista">
                     <!-- list group item-->
                     <li class="list-group-item">
                         <!-- Custom content-->
