--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Mesto boravka</label>
-                                <select class="form-control" id="profil-grad" ata-sb-validations="required"></select>
+                                <select class="form-control" id="city-register" ata-sb-validations="required"></select>
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">Email</label>
@@ -75,7 +75,7 @@
                                 <div class="dugme">
                                     <button type="button" class="btn btn-outline-primary">Sačuvaj</button>
                                 </div>
-                            </div>    
+                            </div>
                         </form>
                     </div>
                 </div>
