--- a/Project/src/main/resources/templates/Logovanmain.html
+++ b/Project/src/main/resources/templates/Logovanmain.html
@@ -14,6 +14,7 @@ and open the template in the editor.
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css" type="text/css">
+    <script src="/js/jQuery.js" type="text/javascript"></script>
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
