--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <!--<link rel="stylesheet" href="/css/style.css" type="text/css"> -->
     <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <script src="/js/jQuery.js" type="text/javascript"></script>
 </head>
 
 <body id="page-top">
