--- a/Project/src/main/resources/templates/signup.html
+++ b/Project/src/main/resources/templates/signup.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script src="/js/jQuery.js" type="text/javascript"></script>
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
