--- a/Project/src/main/resources/templates/sviOglasi.html
+++ b/Project/src/main/resources/templates/sviOglasi.html
@@ -12,9 +12,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <script src="/js/jQuery.js" type="text/javascript"></script>
+    <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body class="ostaleStrane">
+<body class="ostaleStrane" onload="Dajgradove();Dajtagove()">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Lako do posla</a>
@@ -42,18 +44,18 @@
                     <input class="filter-main" type="search" placeholder="Pretraži">
                 </div>
                 <div class="col-sm-3">
-                    <select class="filter-main" value="Odaberite oblast rada">
+                    <select class="filter-main" id="tagovi" value="Odaberite oblast rada">
                             <option>IT sektor</option>
                         </select>
                 </div>
                 <div class="col-sm-3">
-                    <select class="filter-main" value="Odaberite lokaciju">
-                            <option>Svi gradovi</option>
-                            <option>Kragujevac</option>
+                    <select class="filter-main" id="city-register" value="Odaberite lokaciju">
+                            <option value="0">Svi gradovi</option>
+
                         </select>
                 </div>
                 <div class="col-sm-1">
-                    <button class="btn btn-primary btn-xl" id="filter-btn-main"><i style="width: 80%; height: 80%" class="fas fa-search"></i></button>
+                    <button class="btn btn-primary btn-xl" id="filter-btn-main" onclick="ucitajOglase()"><i style="width: 80%; height: 80%" class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
